--- a/website Final/index.html
+++ b/website Final/index.html
@@ -123,7 +123,7 @@
 					<h1>Why Hello There! </h1>
 					<h3>My name is Frank Schweizer, </h3>
 						<div id = "text2">
-							<p>I'm a Business Managment Major hear at the University of Maine. This is my first website designe. This site was made for my BUA 235 class. I hope you enjoy.</P>
+							<p>I'm a Business Managment Major hear at the University of Maine. This is my first website design. This site was made for my BUA 235 class. I hope you enjoy.</P>
 						</div>
 				</div>
 			</div>
